[package]
name = "icm-wavelet-dp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "icm-wavelet-dp"
path = "src/main.rs"

[lib]
name = "icm_wavelet_dp"
path = "src/lib.rs"

[dependencies]
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["blas","intel-mkl"] }
plotters = "0.3.7"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
statrs = "0.18.0"
clap = { version = "4.4", features = ["derive"] }
